--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de Vida</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <link rel=<enlace rel="preconectar" href="https://fonts.googleapis.com">
         <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
         <enlace href="https: //fonts.googleapis.com/css2? family= Abril+Fatface & family= Anton & family= Fira+Sans+Condensed:wght@100 & family= Open+Sans:ital,wght@1,500 & family= PT+Sans+ Narrow & family= Ysabeau+Office:ital,wght@0,300;1,100 & display=swap" rel="stylesheet">
